--- a/Rolodoc/Controller/ProfileFieldCell.xib
+++ b/Rolodoc/Controller/ProfileFieldCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileFieldCell" rowHeight="443" id="KGk-i7-Jjw" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="443"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileFieldCell" rowHeight="400" id="KGk-i7-Jjw" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="442.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="399.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bIH-P9-CcB">
-                        <rect key="frame" x="10" y="10" width="300" height="386"/>
+                        <rect key="frame" x="10" y="10.5" width="300" height="385"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8nX-r0-sjV">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
@@ -45,6 +45,16 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="YlX-yy-Ubf" firstAttribute="leading" secondItem="yow-ON-5rf" secondAttribute="trailing" constant="10" id="0oJ-eJ-oUP"/>
+                                            <constraint firstAttribute="trailing" secondItem="YlX-yy-Ubf" secondAttribute="trailing" id="TFX-AN-ZeZ"/>
+                                            <constraint firstItem="yow-ON-5rf" firstAttribute="top" secondItem="YUu-KW-zAY" secondAttribute="top" id="W8B-oI-nVf"/>
+                                            <constraint firstItem="yow-ON-5rf" firstAttribute="leading" secondItem="YUu-KW-zAY" secondAttribute="leading" id="dU5-60-PiH"/>
+                                            <constraint firstItem="YlX-yy-Ubf" firstAttribute="leading" secondItem="yow-ON-5rf" secondAttribute="trailing" constant="10" id="dvs-CB-aZ0"/>
+                                            <constraint firstAttribute="bottom" secondItem="YlX-yy-Ubf" secondAttribute="bottom" id="mpd-99-EDf"/>
+                                            <constraint firstItem="YlX-yy-Ubf" firstAttribute="top" secondItem="YUu-KW-zAY" secondAttribute="top" id="w2G-Oy-XQm"/>
+                                            <constraint firstAttribute="bottom" secondItem="yow-ON-5rf" secondAttribute="bottom" id="ygv-Vr-A7M"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
@@ -52,7 +62,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCo-fd-ybn">
-                                <rect key="frame" x="10" y="40" width="280" height="30.5"/>
+                                <rect key="frame" x="10" y="40" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="udQ-YY-IoJ"/>
                                 </constraints>
@@ -61,7 +71,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="150" verticalCompressionResistancePriority="150" text="Ask a question" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-gX-V3a">
-                                <rect key="frame" x="10" y="76" width="280" height="250"/>
+                                <rect key="frame" x="10" y="75" width="280" height="250"/>
                                 <color key="backgroundColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="FdF-dO-zq3"/>
@@ -71,7 +81,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SP5-Ol-pBS">
-                                <rect key="frame" x="0.0" y="336" width="300" height="50"/>
+                                <rect key="frame" x="0.0" y="335" width="300" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNC-KY-h34" customClass="CheckboxButton" customModule="Rolodoc" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
@@ -109,9 +119,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="bIH-P9-CcB" secondAttribute="trailing" constant="10" id="I5f-mW-cJ7"/>
-                    <constraint firstItem="bIH-P9-CcB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="bnk-Nd-7ee"/>
-                    <constraint firstItem="bIH-P9-CcB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="zZU-9L-4Lt"/>
+                    <constraint firstItem="bIH-P9-CcB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="29C-dK-xTd"/>
+                    <constraint firstAttribute="bottom" secondItem="bIH-P9-CcB" secondAttribute="bottom" constant="10" id="Fuc-ro-71I"/>
+                    <constraint firstItem="bIH-P9-CcB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Vyd-t6-vv0"/>
+                    <constraint firstAttribute="trailing" secondItem="bIH-P9-CcB" secondAttribute="trailing" constant="10" id="euX-A2-yPX"/>
                 </constraints>
                 <userDefinedRuntimeAttributes>
                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -131,7 +142,7 @@
                 <outlet property="textField" destination="YlX-yy-Ubf" id="ub8-dT-MyQ"/>
                 <outlet property="titleLabel" destination="yow-ON-5rf" id="eah-In-ADg"/>
             </connections>
-            <point key="canvasLocation" x="129" y="280.5"/>
+            <point key="canvasLocation" x="129" y="259"/>
         </tableViewCell>
     </objects>
     <resources>
